<resources>
    <string name="app_name">Dynamical</string>

    <string name="route_list_title">Route List</string>
    <string name="new_track_title">New Track</string>
    <string name="settings_title">Settings</string>

    <string name="stopwatch_title">Time</string>
    <string name="distance_title">Distance</string>
    <string name="step_counter_title">Steps</string>

    <string name="route_details_title">Route details</string>

    <string name="permission_denied_toast">Required permissions denied</string>

    <string name="owner_label">Shared by: %1$s</string>

    <string name="time_label">Time: %1$s</string>
    <string name="step_count_label">Step count: %1$s</string>
    <string name="distance_label">Distance: %1$s</string>

    <string name="time_description_label">Time</string>
    <string name="step_count_description_label">Step count</string>
    <string name="distance_description_label">Distance</string>

    <string name="notification_title">Dynamical</string>
    <string name="notification_pause_button">PAUSE</string>
    <string name="notification_resume_button">RESUME</string>

    <string name="delete_route">Delete</string>
    <string name="follow_route">Follow</string>
    <string name="unfollow_route">Unfollow</string>
    <string name="share_route">Share</string>
    <string name="unshare_route">Unshare</string>

    <string name="end_tracking_confirm_message">Do you want to end the tour?</string>
    <string name="delete_confirm_message">Are you sure you want to delete this route?</string>
    <string name="delete_confirm_positive">Yes</string>
    <string name="delete_confirm_negative">No</string>
    <string name="sign_in_request">Only logged users can share their routes</string>
    <string name="no_user_error">Please sign to share this route</string>
    <string name="confirm_button">OK</string>
    <string name="no_connection_error">You\'re offline. Please try again in a few minutes</string>
    <string name="route_shared_monit">Route shared successfully</string>
    <string name="route_unshared_monit">Route unshared successfully</string>

    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="reset_password_button">Forgot password?</string>
    <string name="email_hint">Enter e-mail</string>
    <string name="password_hint">Enter password</string>
    <string name="incorrect_email_error">Incorrect email address</string>

    <string name="sign_out_button">Sign out</string>
    <string name="modify_button">Edit</string>

    <string name="sign_up_title">Sign up</string>
    <string name="reset_password_title">Reset password</string>
    <string name="modify_title">Edit</string>

    <string name="sign_up_name">Enter name…</string>
    <string name="sign_up_email">Enter e-mail…</string>
    <string name="sign_up_password">Enter password…</string>
    <string name="sign_up_confirm_password">Confirm password…</string>
    <string name="sign_up_submit">Sign up</string>

    <string name="empty_name_error">Please enter name</string>
    <string name="missing_password_error">Please enter password</string>
    <string name="password_not_match_error">Passwords are not the same</string>
    <string name="wrong_password">Wrong password</string>

    <string name="email_sent">Email has been sent</string>

    <string name="modify_user_old_password">Enter old password…</string>
    <string name="modify_user_new_password">Enter new password…</string>
    <string name="modify_user_confirm_new_password">Confirm new password…</string>
    <string name="modify_submit">Save changes</string>

    <string name="loading_message">Loading…</string>

    <string name="local_list_title">Your routes</string>
    <string name="global_list_title">Explore</string>

    <string name="EXTRA_ROUTE">com.example.dynamical.extra.ROUTE</string>
    <string name="EXTRA_ROUTE_IS_GLOBAL">com.example.dynamical.extra.ROUTE_IS_SHARED</string>
</resources>