<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/follow_route"
        android:icon="@drawable/follow"
        android:title="@string/follow_route" />
    <item
        android:id="@+id/unfollow_route"
        android:icon="@drawable/unfollow"
        android:title="@string/unfollow_route" />
    <item
        android:id="@+id/share_route"
        android:icon="@drawable/share"
        android:title="@string/share_route" />
    <item
        android:id="@+id/unshare_route"
        android:icon="@drawable/unshare"
        android:title="@string/unshare_route" />
    <item
        android:id="@+id/delete_route"
        android:icon="@drawable/delete"
        android:title="@string/delete_route" />
</menu>