<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newtrack.fragment.NewTrackFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/start"
        app:layout_constraintBottom_toBottomOf="@id/map_fragment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_fragment_container"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/stop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/map_fragment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/action_button"
        app:layout_constraintTop_toBottomOf="@id/map_fragment_container"
        tools:ignore="ContentDescription" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_preview_height"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:padding="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_fragment_container">

        <LinearLayout
            android:id="@+id/left_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/right_layout"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/time_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stopwatch_title"
                    android:textSize="@dimen/title_size" />

                <TextView
                    android:id="@+id/time_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/placeholder"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/distance_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/distance_title"
                    android:textSize="@dimen/title_size" />

                <TextView
                    android:id="@+id/distance_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/placeholder"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/left_layout">

            <LinearLayout
                android:id="@+id/step_count_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/step_counter_title"
                    android:textSize="@dimen/title_size" />

                <TextView
                    android:id="@+id/step_count_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/placeholder"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>